fix-galery-title-text-align

--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -4,6 +4,7 @@
 }
 
 .gallery-title {
+  text-align: center;
   margin-bottom: 16px;
 }
 
